--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.7",
+    "@types/node-netstat": "^1.8.4",
     "@types/prompt-sync": "^4.2.3",
     "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
