--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.41.1",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "inquirer": "^12.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
