--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "maciejj1",
   "license": "ISC",
   "dependencies": {
+    "amrhextotext": "^1.1.1",
     "argon2": "^0.41.1",
     "express": "^4.21.1"
   },
