--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "argon2": "^0.41.1",
     "express": "^4.21.1",
-    "inquirer": "^12.0.0"
+    "inquirer": "^12.0.0",
+    "queue": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
