--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.41.1",
+    "class-transformer": "^0.5.1",
     "express": "^4.21.1",
     "inquirer": "^12.0.0",
-    "queue": "^7.0.0"
+    "queue": "^7.0.0",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
