--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "test": "npx tsc; node --test",
+    "test-jest": "jest test/."
   },
   "author": "maciejj1",
   "license": "ISC",
@@ -20,11 +22,14 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.7",
     "@types/node-netstat": "^1.8.4",
     "@types/prompt-sync": "^4.2.3",
     "concurrently": "^9.0.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
